--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,9 @@
     @apply flex items-center w-full gap-2 px-4 py-2 text-gray-100 transition-all hover:bg-slate-800;
   }
   .social-menu {
-    @apply flex items-center justify-center gap-3 p-1.5 my-6 bg-indigo-600 rounded-md hover:bg-indigo-700;
+    @apply flex items-center justify-center w-full h-10 gap-3 p-2 my-6 bg-indigo-600 rounded-md hover:bg-indigo-700 disabled:bg-gray-500;
+  }
+  .large-button {
+    @apply flex items-center justify-center w-full p-3 mx-auto text-white transition-all duration-200 bg-indigo-600 rounded-md disabled:bg-gray-500 hover:bg-indigo-700;
   }
 }
