--- a/src/index.css
+++ b/src/index.css
@@ -92,19 +92,16 @@
   }
 
   /* createBlog */
-  .createBlog {
+  .createArticle {
     @apply w-8/12 mx-auto my-8;
   }
 
-  .createBlog input {
+  .createArticle input {
     @apply w-full pl-0 text-3xl font-bold bg-transparent border-none shadow-none outline-none appearance-none focus:ring-0 placeholder:text-3xl focus:border-none focus:outline-none;
   }
 
-  .createBlog textarea {
+  .createArticle textarea {
     @apply w-full pl-0 text-lg bg-transparent border-none outline-none appearance-none focus:ring-0 placeholder:text-lg focus:border-none focus:outline-none;
-  }
-  .createBlog #tags {
-    @apply w-full text-base font-normal placeholder:text-base text-slate-500 placeholder:italic;
   }
 
   /* Action Modal */
